<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@drawable/loginback"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

  <include layout="@layout/progress"/>

  <LinearLayout
      android:id="@+id/ldatall"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="MissingConstraints">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">


      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="80dp"
          android:orientation="vertical"
          tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/register"
            android:padding="5dp"
            app:srcCompat="@drawable/a" />


        <EditText
            android:id="@+id/lEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="#48FFFFFF"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="#FFE602"
            android:textColorHint="#FDE409"
            android:textSize="21sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="#48FFFFFF"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="#FFE602"
            android:textColorHint="#FDE409"
            android:textSize="21sp"
            android:textStyle="bold"
            tools:ignore="TextFields" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/lLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttondrable"
            android:padding="10dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/lCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/createaccount"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />


      </LinearLayout>
    </ScrollView>
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>