<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"

    android:layout_height="match_parent"
    tools:context=".activity.CreatePostActivity">

    <ImageView
        android:id="@+id/imgPost"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:contentDescription="@string/register"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        layout="@layout/progress"

     />

    <EditText
        android:id="@+id/txtCaptionCP"
        android:layout_width="match_parent"
        android:ems="20"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/add_a_caption"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/imgPost" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnShareCP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2122EA8"
        android:padding="10dp"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/txtCaptionCP"
        tools:layout_editor_absoluteX="70dp" />


</androidx.constraintlayout.widget.ConstraintLayout>