<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@drawable/loginback"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

   <include layout="@layout/progress"/>

    <LinearLayout
        android:id="@+id/rdatall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewCount">

         <LinearLayout
             android:layout_width="wrap_content"
             android:orientation="vertical"
             android:layout_height="wrap_content">



            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/register"
                android:padding="5dp"
                app:srcCompat="@drawable/a" />

            <EditText
                android:id="@+id/rName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="#48FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="#FFE602"
                android:textColorHint="#FFE602"
                android:textSize="21sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/rEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="#48FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="#FFE602"
                android:textColorHint="#FFE602"
                android:textSize="21sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/rPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="#48FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="#FFE602"
                android:textColorHint="#FFE602"
                android:textSize="21sp"
                android:textStyle="bold"
                tools:ignore="TextFields" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/rbtnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttondrable"
                android:padding="10dp"
                android:text="@string/register" />

            <TextView
                android:id="@+id/rAllready"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/allreadyacc"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

         </LinearLayout>
        </ScrollView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>