<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints,UselessParent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/home_profile_image"
                        android:layout_width="60dp"
                        android:layout_height="60dp"

                        android:src="@drawable/profile"
                        app:civ_border_color="#FF000000"

                        app:civ_border_width="2dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/homeImgPost" />

                    <TextView
                        android:id="@+id/homeuserName"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:layout_marginStart="2dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/homefollow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:background="#37A1F6"
                            android:outlineProvider="paddedBounds"
                            android:text="@string/follow"

                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/homecaption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/liked_by"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:layout_marginStart="10dp"
                            android:textStyle="bold"

                            tools:ignore="MissingConstraints" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/homeImgPost"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                app:srcCompat="@drawable/manimage"
                tools:ignore="MissingConstraints" />


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/homeImgPost">

                <ImageView
                    android:id="@+id/homelike"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@string/login"

                    app:srcCompat="@drawable/baseline_heart_broken_24"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/homemsg"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"

                    android:contentDescription="@string/login"
                    app:layout_constraintBottom_toBottomOf="@+id/homelike"
                    app:layout_constraintStart_toEndOf="@+id/homelike"
                    app:layout_constraintTop_toTopOf="@+id/homelike"
                    app:srcCompat="@drawable/chat" />

                <ImageView
                    android:id="@+id/homeshare"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"

                    android:contentDescription="@string/login"

                    app:srcCompat="@drawable/sent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <TextView
                    android:id="@+id/homecount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/liked_by"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                     android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="@+id/homecaption"
                    app:layout_constraintTop_toBottomOf="@+id/homecaption"
                    tools:ignore="MissingConstraints" />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>